# rag-gemini

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
public/scripts/: init.sql
src/abstraction/models/: MessageDTO.py  RerankingDTO.py
src/config/: bootstrap.py  get_service.py
src/controllers/: health_controller.py  query_controller.py
src/repository/: embedding_repository.py
src/services/llm/: gemini.py
src/services/preprocessing/: text_preprocessing_service.py
src/services/prompts/: prompt_builder.py
src/services/query/: query_service.py
src/services/rag/ingestion/: ingestion_service.py
src/services/rag/retrieval/: retrieval_service.py
